kubernetes/.archive/enchanted-natures/web-app/app/service.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: enchanted-web-app
  namespace: enchanted-natures
spec:
  selector:
    app: enchanted-web-app
  type: ClusterIP
  ports:
    - name: enchanted-web-app
      protocol: TCP
      port: 80
      targetPort: 80
